# NftMinter

./: CMakeLists.txt  main.cpp
.github/workflows/: build-test-install.yml
include/: CreateNFT.hpp
qml/: BoxMenu.qml  ConfDrawer.qml  SendDialog.qml  UpdateFrame.qml
qml/empty/: UpdateFrame.qml
src/: CreateNFT.cpp
wasm/: index.html  style.css
